add docker support for dynamically synthesize notebook

--- a/frontend/assets/scripts/SynthesizeEverything.ipynb
+++ b/frontend/assets/scripts/SynthesizeEverything.ipynb
@@ -28,7 +28,6 @@
     "import random\n",
     "import time\n",
     "import os\n",
-    "import inspect\n",
     "import json\n",
     "import uuid\n",
     "from azure.cosmos import CosmosClient, PartitionKey, exceptions\n",
@@ -51,8 +50,9 @@
     }
    ],
    "source": [
-    "# Set the base directory to the current notebook's directory (hardcode for now)\n",
-    "base_dir = r\"c:\\repo\\AOAI_ContactCenterDemo\\frontend\\assets\\scripts\""
+    "# Set the base directory to the current notebook's directory \n",
+    "# base_dir = r\"c:\\repo\\AOAI_ContactCenterDemo\\frontend\\assets\\scripts\" (hardcode for local dev machine)\n",
+    "base_dir = os.path.join(os.getcwd(),\"assets\",\"scripts\") # (for docker environment)"
    ]
   },
   {
