--- a/frontend/assets/scripts/SynthesizeEverything.ipynb
+++ b/frontend/assets/scripts/SynthesizeEverything.ipynb
@@ -50,9 +50,12 @@
     }
    ],
    "source": [
-    "# Set the base directory to the current notebook's directory \n",
-    "# base_dir = r\"c:\\repo\\AOAI_ContactCenterDemo\\frontend\\assets\\scripts\" (hardcode for local dev machine)\n",
-    "base_dir = os.path.join(os.getcwd(),\"assets\",\"scripts\") # (for docker environment)"
+    "running_in_docker = os.getenv('RUNNING_IN_DOCKER') == 'true'\n",
+    "\n",
+    "if running_in_docker:\n",
+    "    base_dir = os.path.join(os.getcwd(), \"assets\", \"scripts\")  # Docker environment\n",
+    "else:\n",
+    "    base_dir = r\"c:\\repo\\AOAI_ContactCenterDemo\\frontend\\assets\\scripts\"  # Local machine"
    ]
   },
   {
