--- a/frontend/assets/scripts/SynthesizeEverything_output.ipynb
+++ b/frontend/assets/scripts/SynthesizeEverything_output.ipynb
@@ -1879,19 +1879,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5e3f9b99",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-03T08:24:05.189091Z",
+     "iopub.status.busy": "2024-09-03T08:24:05.189091Z",
+     "iopub.status.idle": "2024-09-03T08:25:25.922100Z",
+     "shell.execute_reply": "2024-09-03T08:25:25.920677Z"
+    },
     "papermill": {
-     "duration": null,
-     "end_time": null,
+     "duration": 80.745446,
+     "end_time": "2024-09-03T08:25:25.924188",
      "exception": false,
      "start_time": "2024-09-03T08:24:05.178742",
-     "status": "running"
+     "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 0_content_Sustainability_Google_Search.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 1_disappointed_Sustainability_YouTube.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 2_disappointed_account_Gmail.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 3_upset_support_Android.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 4_mixed_support_Google_Maps.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 5_angry_payment_Google_Maps.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 6_frustrated_Quality_Google_Maps.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 7_happy_service_Google_Search.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 8_happy_Quality_Android.json has been successfully created!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 9_content_service_Gmail.json has been successfully created!\n",
+      "Document 0_content_Sustainability_Google_Search.json has been successfully updated!\n",
+      "Document 1_disappointed_Sustainability_YouTube.json has been successfully updated!\n",
+      "Document 2_disappointed_account_Gmail.json has been successfully updated!\n",
+      "Document 3_upset_support_Android.json has been successfully updated!\n",
+      "Document 4_mixed_support_Google_Maps.json has been successfully updated!\n",
+      "Document 5_angry_payment_Google_Maps.json has been successfully updated!\n",
+      "Document 6_frustrated_Quality_Google_Maps.json has been successfully updated!\n",
+      "Document 7_happy_service_Google_Search.json has been successfully updated!\n",
+      "Document 8_happy_Quality_Android.json has been successfully updated!\n",
+      "Document 9_content_service_Gmail.json has been successfully updated!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 0_content_Sustainability_Google_Search.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 1_disappointed_Sustainability_YouTube.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 2_disappointed_account_Gmail.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 3_upset_support_Android.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 4_mixed_support_Google_Maps.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 5_angry_payment_Google_Maps.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 6_frustrated_Quality_Google_Maps.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 7_happy_service_Google_Search.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 8_happy_Quality_Android.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 9_content_service_Gmail.json has been successfully created in Azure Cosmos DB!\n"
+     ]
+    }
+   ],
    "source": [
     "# execute the synthesize_conversations function\n",
     "synthesize_human_conversations(number_of_human_conversations, company_name)\n",
@@ -1922,8 +2079,8 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": null,
-   "end_time": null,
+   "duration": 135.971173,
+   "end_time": "2024-09-03T08:25:26.166949",
    "environment_variables": {},
    "exception": null,
    "input_path": ".\\frontend\\assets\\scripts\\SynthesizeEverything.ipynb",
