Refactor CosmosDB client creation in frontend

--- a/frontend/assets/scripts/SynthesizeEverything.ipynb
+++ b/frontend/assets/scripts/SynthesizeEverything.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,25 +32,22 @@
     "import uuid\n",
     "from azure.cosmos import CosmosClient, PartitionKey, exceptions\n",
     "from dotenv import load_dotenv\n",
+    "\n",
+    "import sys\n",
+    "# Ensure the 'frontend' directory is in the Python path\n",
+    "sys.path.append(os.path.join(os.getcwd(), \"..\\..\"))\n",
+    "from utils import create_cosmosdb_client\n",
     "# load the environment variables\n",
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\repo\\AOAI_ContactCenterDemo\\frontend\\assets\\scripts\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "running_in_docker = os.getenv('RUNNING_IN_DOCKER') == 'true'\n",
+    "running_in_docker = os.getenv('RUNNING_IN_DOCKER') == 'false'\n",
     "\n",
     "if running_in_docker:\n",
     "    base_dir = os.path.join(os.getcwd(), \"assets\", \"scripts\")  # Docker environment\n",
@@ -67,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,23 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Container 'Customer' already exists. Deleting all items...\n",
-      "All items in container 'Customer' have been deleted.\n",
-      "Container 'Product' already exists. Deleting all items...\n",
-      "All items in container 'Product' have been deleted.\n",
-      "Container 'Purchases' already exists. Deleting all items...\n",
-      "All items in container 'Purchases' have been deleted.\n",
-      "Container 'Human_Conversations' already exists. Deleting all items...\n",
-      "All items in container 'Human_Conversations' have been deleted.\n",
-      "Container 'AI_Conversations' already exists. Deleting all items...\n",
-      "All items in container 'AI_Conversations' have been deleted.\n"
+      "Container 'Customer' does not exist. Creating new container...\n",
+      "Container 'Customer' has been created.\n",
+      "Container 'Product' does not exist. Creating new container...\n",
+      "Container 'Product' has been created.\n",
+      "Container 'Purchases' does not exist. Creating new container...\n",
+      "Container 'Purchases' has been created.\n",
+      "Container 'Human_Conversations' does not exist. Creating new container...\n",
+      "Container 'Human_Conversations' has been created.\n",
+      "Container 'AI_Conversations' does not exist. Creating new container...\n",
+      "Container 'AI_Conversations' has been created.\n"
      ]
     }
    ],
@@ -151,7 +148,8 @@
     "# Azure Cosmos DB connection details\n",
     "cosmos_endpoint = os.getenv(\"COSMOS_ENDPOINT\")\n",
     "cosmos_key = os.getenv(\"COSMOS_KEY\")\n",
-    "cosmos_client = CosmosClient(cosmos_endpoint, cosmos_key)\n",
+    "# cosmos_client = CosmosClient(cosmos_endpoint, cosmos_key)\n",
+    "cosmos_client = create_cosmosdb_client(use_cosmos_key=False)\n",
     "database_name = os.getenv(\"COSMOS_DATABASE\")\n",
     "database = cosmos_client.create_database_if_not_exists(id=database_name)\n",
     "\n",
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "parameters"
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,20 +810,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'products': ['Dove'], 'urls': ['https://www.dove.com']}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_product_and_url_list(company_name, number_of_product)"
    ]
@@ -839,19 +826,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Document 0_Alex_Xavier_.json has been successfully created!\n",
-      "Document 0_Alex_Xavier_.json has been successfully updated!\n",
-      "Document 0_Alex_Xavier_.json has been successfully created in Azure Cosmos DB!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "synthesize_customer_profiles(number_of_customers)\n",
     "# upload JSON files from Cosmos_Customer folder to Azure Cosmos DB \n",
@@ -869,19 +846,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Document 0_Dove__.json has been successfully created!\n",
-      "Document 0_Dove__.json has been successfully updated!\n",
-      "Document 0_Dove__.json has been successfully created in Azure Cosmos DB!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "synthesize_product_profiles(company_name)\n",
     "# upload JSON files from Cosmos_Product folder to Azure Cosmos DB \n",
@@ -899,22 +866,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Document 1_6ba9b9b4103f392486566ee56abaf438_122d34ec930c32828120d850378910f6_.json has been successfully created!\n",
-      "Document 2_6ba9b9b4103f392486566ee56abaf438_122d34ec930c32828120d850378910f6_.json has been successfully created!\n",
-      "Document 1_6ba9b9b4103f392486566ee56abaf438_122d34ec930c32828120d850378910f6_.json has been successfully updated!\n",
-      "Document 2_6ba9b9b4103f392486566ee56abaf438_122d34ec930c32828120d850378910f6_.json has been successfully updated!\n",
-      "Document 1_6ba9b9b4103f392486566ee56abaf438_122d34ec930c32828120d850378910f6_.json has been successfully created in Azure Cosmos DB!\n",
-      "Document 2_6ba9b9b4103f392486566ee56abaf438_122d34ec930c32828120d850378910f6_.json has been successfully created in Azure Cosmos DB!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "synthesize_purchases()\n",
     "# upload JSON files from Cosmos_Purchases folder to Azure Cosmos DB \n",
@@ -932,22 +886,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Document 0_angry_Sustainability_Dove.json has been successfully created!\n",
-      "Document 1_mixed_information_Dove.json has been successfully created!\n",
-      "Document 0_angry_Sustainability_Dove.json has been successfully updated!\n",
-      "Document 1_mixed_information_Dove.json has been successfully updated!\n",
-      "Document 0_angry_Sustainability_Dove.json has been successfully created in Azure Cosmos DB!\n",
-      "Document 1_mixed_information_Dove.json has been successfully created in Azure Cosmos DB!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# execute the synthesize_conversations function\n",
     "synthesize_human_conversations(number_of_human_conversations, company_name)\n",
