change CosmosDB to use EntraID based clients

--- a/frontend/assets/scripts/SynthesizeEverything.ipynb
+++ b/frontend/assets/scripts/SynthesizeEverything.ipynb
@@ -31,6 +31,7 @@
     "import json\n",
     "import uuid\n",
     "from azure.cosmos import CosmosClient, PartitionKey, exceptions\n",
+    "from azure.identity import DefaultAzureCredential\n",
     "from dotenv import load_dotenv\n",
     "# load the environment variables\n",
     "load_dotenv()"
@@ -149,9 +150,11 @@
    ],
    "source": [
     "# Azure Cosmos DB connection details\n",
+    "credential = DefaultAzureCredential()\n",
     "cosmos_endpoint = os.getenv(\"COSMOS_ENDPOINT\")\n",
-    "cosmos_key = os.getenv(\"COSMOS_KEY\")\n",
-    "cosmos_client = CosmosClient(cosmos_endpoint, cosmos_key)\n",
+    "# cosmos_key = os.getenv(\"COSMOS_KEY\")\n",
+    "# cosmos_client = CosmosClient(cosmos_endpoint, cosmos_key)\n",
+    "cosmos_client = CosmosClient(cosmos_endpoint, credential)\n",
     "database_name = os.getenv(\"COSMOS_DATABASE\")\n",
     "database = cosmos_client.create_database_if_not_exists(id=database_name)\n",
     "\n",
